--- a/src/components/3main/main.css
+++ b/src/components/3main/main.css
@@ -30,10 +30,16 @@
   display: flex;
   flex-direction: row;
 }
-.PopularBy{
-  background-color: #F06292;
+.PopularBy {
+  background-color: #F7F8FA;
   height: inherit;
   flex: 1;
+  display: flex;
+  align-items: center;
+  color: #78909C;
+}
+.PopularBy span {
+  margin-left: 40px;
 }
 .NavBar {
   background-color: #0091EA;
