--- a/src/components/3main/bookShelf/book/bookStyle.css
+++ b/src/components/3main/bookShelf/book/bookStyle.css
@@ -1,20 +1,32 @@
 .Book {
-  background-color: #311B92;
+  background-color: #FFFFFF;
   height: 250px;
   width: 350px;
   margin: 40px 20px;
   position: relative;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+}
+.Book:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 .BookCover {
-  background-color: #26C6DA;
+  background-color: #F7F8FA;
   height: 180px;
-  width: 120px;
+  width: auto;
+  max-width: 120px;
   position: absolute;
   top: -30px;
   left: 10px;
+  text-align: center;
+}
+.BookCover img {
+  max-width: 100%;
+  max-height: 100%;
+  vertical-align: middle;
 }
 .BookInfo {
-  background-color: #F06292;
+  background-color: #FFFFFF;
   height: 200px;
   width: 220px;
   position: absolute;
