--- a/src/components/3main/bookShelf/book/bookStyle.css
+++ b/src/components/3main/bookShelf/book/bookStyle.css
@@ -21,9 +21,12 @@
   text-align: center;
 }
 .BookCover img {
+  min-height: 180px;
   max-width: 100%;
   max-height: 100%;
   vertical-align: middle;
+  align-self: center;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 }
 .BookInfo {
   background-color: #FFFFFF;
@@ -31,6 +34,37 @@
   width: 220px;
   position: absolute;
   right: 0;
+}
+.BookInfo h1 {
+  color: #263238;
+  font-size: 0.8em;
+  padding: 5px;
+  height: 35px;
+}
+.Author {
+  margin-top: 0;
+  color:#607D8B;
+  font-size: 0.7em;
+  margin-left: 10px;
+}
+.Rate {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  color: #FFCA28;
+  margin-left: 10px;
+  margin-top: -5px;
+}
+.Rate span {
+  color:#607D8B;
+  font-size: 0.7em;
+  margin-left: 15px;
+}
+.BookDescription {
+  color:#607D8B;
+  font-size: 0.8em;
+  margin: 10px;
+  text-align: justify;  
 }
 .Likes {
   background-color: #9575CD;
