--- a/src/components/2carousel/carouselStyle.css
+++ b/src/components/2carousel/carouselStyle.css
@@ -3,39 +3,46 @@
   height: 40vh;
   width: 90%;
   margin: 0 auto;
-  padding: 40px;
+  padding: 0 20px 40px 20px;
   color: #333;
 }
 .slick-arrow {
   background-color: blue;
 }
 .BookCard {
-  background-color: pink;
+  /*background-color: pink;*/
+  height: 250px;
   width: 420px;
-  height: 300px;
-  display: flex;
-  flex-direction: row;
+  margin: 0 20px 30px 20px;
   position: relative;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
 }
 .Cover {
-  height: 210px;
+  height: 230px;
   width: auto;
-  max-width: 140px;
+  max-width: 150px;
   position: absolute;
-  top: 30px;
+  bottom: -30px;
   left: 20px;
   text-align: center;
+  -webkit-box-shadow: 0 10px 8px 0 rgba(0,0,0,0.4);
+	   -moz-box-shadow: 0 4px 8px 0 rgba(0,0,0,0.4);
+	        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.4);
 }
 .Cover img {
-  min-height: 180px;
+  min-height: 230px;
   max-width: 100%;
   max-height: 100%;
   vertical-align: middle;
   align-self: center;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  -webkit-box-shadow: 0 4px 8px 0 rgba(0,0,0,0.4);
+	   -moz-box-shadow: 0 4px 8px 0 rgba(0,0,0,0.4);
+	        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.4);
 }
 .Info {
-  height: 200px;
+  height: 250px;
   width: 220px;
   position: absolute;
   right: 0;
@@ -56,7 +63,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  color: #FFCA28;
+  /*color: #FFCA28;*/
   margin-left: 10px;
   margin-top: -5px;
 }
@@ -72,6 +79,7 @@
   text-align: justify;  
 }
 .SeeBook button {
+  background-color: red;
   font-size: 15px;
   text-align: center;
   justify-content: center;
