--- a/src/components/2carousel/carouselStyle.css
+++ b/src/components/2carousel/carouselStyle.css
@@ -1,5 +1,5 @@
 .Carousel {
-  background-color: #F7F8FA;
+  background-color: #FAFAFA;
   height: 40vh;
   width: 90%;
   margin: 0 auto;
@@ -18,19 +18,19 @@
   transition: 0.3s;
 }
 .Cover {
-  height: 230px;
+  height: 270px;
   width: auto;
-  max-width: 150px;
+  max-width: 180px;
   position: absolute;
   bottom: -30px;
-  left: 20px;
+  left: 10px;
   text-align: center;
   -webkit-box-shadow: 0 10px 8px 0 rgba(0,0,0,0.4);
 	   -moz-box-shadow: 0 4px 8px 0 rgba(0,0,0,0.4);
 	        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.4);
 }
 .Cover img {
-  min-height: 230px;
+  min-height: 270px;
   max-width: 100%;
   max-height: 100%;
   vertical-align: middle;
@@ -52,20 +52,13 @@
   padding: 5px;
   height: 35px;
 }
-.Author {
+p.Author {
   margin-top: 0;
   color: #FFFFFF;
   font-size: 0.7em;
   margin-left: 10px;
 }
-Info .Rate {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  margin-left: 10px;
-  margin-top: -5px;
-}
-Info .Rate span {
+.Info Rate {
   color: #FFFFFF;
   font-size: 0.7em;
   margin-left: 15px;
