--- a/src/components/3main/bookShelf/book/bookStyle.css
+++ b/src/components/3main/bookShelf/book/bookStyle.css
@@ -19,7 +19,7 @@
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 .BookCover {
-  background-color: #F7F8FA;
+  background-color: #FAFAFA;
   height: 180px;
   width: auto;
   max-width: 120px;
